# ready-made-activities

./: README.md  app.py  docker-compose.yml  pyproject.toml
